--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -1,5 +1,8 @@
 include mixins/svg
 include mixins/separator
 include mixins/button
+include mixins/list
+include mixins/article
+include mixins/article-button
 
 
