--- a/src/assets/scss/сomponents/_button.scss
+++ b/src/assets/scss/сomponents/_button.scss
@@ -1,9 +1,6 @@
 .button {
-  width: 100%;
-  padding: 15px 10px;
-  border-radius: 4px;
-  border-width: 1px;
-  border-style: solid;
+  padding: 10px 18px;
+  border-radius: 8px;
   transform: none;
   box-shadow: none;
   transition: all 0.3s ease;
@@ -46,7 +43,7 @@
     border-radius: 3px;
   }
 
-  &_blue {
+  &_yellow {
     border-color: $white-default;
     background-color: $blue-two;
     color: $white-default;
@@ -57,15 +54,12 @@
     }
   }
 
-  &_white {
-    border-color: $black-default;
-    background-color: $white-default;
+  &_gray {
+    background-color: $gray-three;
     color: $black-default;
 
     &:hover {
-      border-color: $white-default;
-      background-color: $blue-two;
-      color: $white-default;
+      background-color: $yellow-default;
     }
   }
 }
