--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -3,6 +3,7 @@ include mixins
 block vars
   -
     var baseDir = './'
+    var classModifiers = []
   -
     var title = typeof title !== 'undefined' ? title : null
     var description = typeof description !== 'undefined' ? description : null
