--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -91,6 +91,14 @@
     color: $gray-four;
   }
 
+  &_gray-two {
+    color: $gray-one;
+  }
+
+  &_green {
+    color: $green-default;
+  }
+
   &_uppercase {
     text-transform: uppercase;
   }
