--- a/src/assets/scss/about-our-service/_about-our-service.scss
+++ b/src/assets/scss/about-our-service/_about-our-service.scss
@@ -23,7 +23,9 @@
     padding-top: 36px;
 
     p {
-
+      &.readMore__hidden-text {
+        @include shortenText(2, 48);
+      }
     }
   }
 }
