--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -12,7 +12,7 @@ footer.footer(role='contentinfo')
             let mdate = new Date();
             document.write(mdate.getFullYear());
 
-          span &nbsp;Сервис подбора финансовых услуг Brobank.ru, официальный сайт.
+          | &nbsp;Сервис подбора финансовых услуг Brobank.ru, официальный сайт.
 
       .footer__logos
         a(href='' title='')
@@ -83,4 +83,5 @@ footer.footer(role='contentinfo')
       a(href='' title='' role='link') Пользовательское соглашение
       a(href='' title='' role='link') Условия использования
 
-
+<!-- Modals -->
++modal('aboutAdvertisers')
