--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -1,8 +1,19 @@
 include mixins/svg
 include mixins/separator
 include mixins/button
+include mixins/modal
+include mixins/title-and-button
+include mixins/rating-and-reviews
 include mixins/list
 include mixins/article
 include mixins/article-button
+include mixins/best-offers-block
+include mixins/tabs-nav
+include mixins/journal-brobank-block-link
+include mixins/journal-brobank-blocks
+include mixins/carousel-info
+include mixins/carousel-info-exchange-rate-block
+
+
 
 
