--- a/src/assets/scss/mixins/_grid.scss
+++ b/src/assets/scss/mixins/_grid.scss
@@ -66,13 +66,13 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: calc(-3rem * .5);
-  margin-left: calc(-3rem * .5);
+  margin-right: calc(-1.25rem * .5);
+  margin-left: calc(-1.25rem * .5);
 
   & > * {
     max-width: 100%;
-    padding-right: calc(3rem * .5);
-    padding-left: calc(3rem * .5);
+    padding-right: calc(1.25rem * .5);
+    padding-left: calc(1.25rem * .5);
   }
 
   &-cols {
@@ -101,6 +101,24 @@
       }
     }
 
+    &-lg-2 {
+      & > * {
+        @media screen and (min-width: $middle-tablet_width) {
+          flex: 0 0 auto;
+          width: 16.666667%;
+        }
+      }
+
+      &_5 {
+        & > * {
+          @media screen and (min-width: $middle-tablet_width) {
+            flex: 0 0 auto;
+            width: 20%;
+          }
+        }
+      }
+    }
+
     &-lg-3 {
       & > * {
         @media screen and (min-width: $middle-tablet_width) {
@@ -123,7 +141,16 @@
       & > * {
         @media screen and (min-width: $middle-tablet_width) {
           flex: 0 0 auto;
-          width: 20%;
+          width: 41.666667%;
+        }
+      }
+    }
+
+    &-lg-6 {
+      & > * {
+        @media screen and (min-width: $middle-tablet_width) {
+          flex: 0 0 auto;
+          width: 50%;
         }
       }
     }
