--- a/src/assets/scss/our-experts/_our-experts.scss
+++ b/src/assets/scss/our-experts/_our-experts.scss
@@ -3,6 +3,10 @@
     height: 100%;
   }
 
+  h2 {
+    padding-bottom: 35px;
+  }
+
   .article {
     &:not(:first-child) {
       padding-left: 10px;
@@ -25,18 +29,17 @@
     }
 
     &__text {
-      h3 {
-        font-size: 16px;
+      padding-bottom: 0;
+
+      h4 {
         padding-bottom: 4px;
+        font-size: 16px;
+        font-weight: 400;
       }
 
       p {
         font-size: 13px;
         color: $gray-four;
-      }
-
-      h3 {
-        font-weight: 400;
       }
     }
   }
