--- a/src/assets/scss/сomponents/_footer.scss
+++ b/src/assets/scss/сomponents/_footer.scss
@@ -110,6 +110,14 @@
         }
       }
     }
+
+    ul {
+      li {
+        &:not(:first-child) {
+          padding-top: 12px;
+        }
+      }
+    }
   }
 
   &__contscts {
