--- a/src/assets/scss/сomponents/_header.scss
+++ b/src/assets/scss/сomponents/_header.scss
@@ -1,59 +1,96 @@
 .header {
   z-index: 10;
-  //position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 76px;
+  min-height: max-content;
   margin-top: 0;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 33.5px;
-  padding-bottom: 31.5px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  box-shadow: 0 5px 15px 0 transparent;
   background-color: $white-default;
-  backdrop-filter: blur(7px);
+  transition: box-shadow 0.2s ease-in-out, height 0.2s ease-in-out,
+  margin-top 0.2s ease, opacity 0.1s ease-in-out, padding-top 0.2s ease,
+  padding-bottom 0.2s ease;
 
-  &_fixed-hidden {
-    position: fixed;
-    opacity: 0;
-    margin-top: -100px;
-  }
-
-  &_fixed-visible {
-    opacity: 1;
+  &.top-nav-collapse {
+    height: 51px;
     margin-top: 0;
-    transition: margin-top 0.2s ease, opacity 0.2s ease-in-out;
-  }
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0 5px 15px 0 $black-rgba-one;
+    transition: box-shadow 0.2s ease-in-out, height 0.2s ease-in-out,
+    margin-top 0.2s ease, opacity 0.1s ease-in-out, padding-top 0.2s ease,
+    padding-bottom 0.2s ease;
 
-  &_absolute-visible {
-    position: absolute;
+    &.scrollDown {
+      margin-top: -60px;
+      @media screen and (max-width: 1024px) and (orientation: landscape) {
+        opacity: 0;
+      }
+    }
+
+    .navbar-brand {
+      width: 114.55px;
+      height: 30px;
+
+      img {
+        width: 100%;
+      }
+    }
   }
 
   .navbar-brand {
-    font-family: 'Raleway', sans-serif;
-    font-size: 28px;
-    font-weight: 800;
-    text-transform: uppercase;
-    line-height: 1.25em;
+    position: relative;
+    width: 168px;
+    height: 44px;
+    transition: width 0.3s ease, height 0.3s ease;
+
+    img {
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: auto;
+      height: 100%;
+      transition: width 0.3s ease, height 0.3s ease;
+    }
   }
 
   nav {
     text-align: center;
 
+    ul {
+      display: flex;
+      align-items: center;
+
+      & > * {
+        padding-right: calc(1.75rem * .5);
+        padding-left: calc(1.75rem * .5);
+      }
+    }
+
     a {
-      color: $white-default;
+      font-size: 16px;
+      font-weight: 400;
+      color: $black-default;
       transition: color 0.2s $cubicBezier-one;
 
-      & + a {
-        margin-left: 3.75em;
-      }
-
       &:hover {
-        color: $blue-one;
+        color: $blue-three;
       }
 
       &.active {
-        color: $blue-one;
+        color: $blue-three;
+      }
+
+      svg {
+        width: 18px;
+        height: 18px;
       }
     }
   }
